rp862_final_cpsc424/project/out/archive/rp862-final-all-omp-mm-30564624.out
The following modules were not unloaded:
  (Use "module --force purge" to unload all):

  1) StdEnv

Currently Loaded Modules:
  1) StdEnv                              (S)
  2) GCCcore/10.2.0
  3) zlib/1.2.11-GCCcore-10.2.0
  4) binutils/2.35-GCCcore-10.2.0
  5) iccifort/2020.4.304
  6) numactl/2.0.13-GCCcore-10.2.0
  7) UCX/1.9.0-GCCcore-10.2.0
  8) impi/2019.9.304-iccifort-2020.4.304
  9) iimpi/2020b
 10) imkl/2020.4.304-iimpi-2020b
 11) intel/2020b

  Where:
   S:  Module is Sticky, requires --force to unload or purge

 

/home/cpsc424_rp862/Desktop/cpsc-524-parallel-programming/rp862_final_cpsc424/project
r918u05n01

SRC_FILES = src/a-serial.c src/b-serial-blocking.c src/c-omp.c src/d-omp-ts.c src/timing.c src/utilities.c
OBJ_FILES =  obj/a-serial.o  obj/b-serial-blocking.o  obj/c-omp.o  obj/d-omp-ts.o  obj/timing.o  obj/utilities.o
ALL = bin/c-omp bin/d-omp-ts
rm -rf obj bin
SRC_FILES = src/a-serial.c src/b-serial-blocking.c src/c-omp.c src/d-omp-ts.c src/timing.c src/utilities.c
OBJ_FILES =  obj/a-serial.o  obj/b-serial-blocking.o  obj/c-omp.o  obj/d-omp-ts.o  obj/timing.o  obj/utilities.o
ALL = bin/c-omp bin/d-omp-ts
icc -g -O3 -xHost -fno-alias -std=c99 -qopenmp -lmkl_rt -I include -c src/c-omp.c -o obj/c-omp.o
icc -g -O3 -xHost -fno-alias -std=c99 -qopenmp -lmkl_rt -I include -c src/timing.c -o obj/timing.o
icc -g -O3 -xHost -fno-alias -std=c99 -qopenmp -lmkl_rt -I include -c src/utilities.c -o obj/utilities.o
src/utilities.c(100): error: identifier "size_AB" is undefined
      for (int i = 0; i < size_AB; i++)
                          ^

src/utilities.c(103): error: identifier "size_C" is undefined
          if (i < size_C)
                  ^

compilation aborted for src/utilities.c (code 2)
make: *** [Makefile-omp:29: obj/utilities.o] Error 2
/var/spool/slurmd/job30564624/slurm_script: line 26: ./bin/c-omp: No such file or directory

real	0m0.003s
user	0m0.000s
sys	0m0.000s
/var/spool/slurmd/job30564624/slurm_script: line 26: ./bin/c-omp: No such file or directory

real	0m0.002s
user	0m0.000s
sys	0m0.000s
/var/spool/slurmd/job30564624/slurm_script: line 26: ./bin/c-omp: No such file or directory

real	0m0.001s
user	0m0.000s
sys	0m0.000s
